--- a/almurut_core/templates/favorites.html
+++ b/almurut_core/templates/favorites.html
@@ -205,27 +205,16 @@
                                             </tr>
                                         </thead>
                                         <tbody>
+                                        {% for item in my_favorite_products %}
                                             <tr>
-                                                <td class="li-product-remove"><a href="#"><i class="fa fa-times"></i></a></td>
-                                                <td class="li-product-thumbnail"><a href="#"><img src="{% static 'images/wishlist-thumb/1.jpg' %}" alt=""></a></td>
-                                                <td class="li-product-name"><a href="#">Giro Civilia</a></td>
-                                                <td class="li-product-price"><span class="amount">$23.39</span></td>
+                                                 <td class="li-product-remove"><a href="#"><i class="fa fa-times"></i></a></td>
+                                                <td class="li-product-thumbnail"><a href="#"><img src="{{ item.preview_image.url }}" alt="здесь должна была быть изображение"></a></td>
+                                                <td class="li-product-name"><a href="#">{{ item.name }}</a></td>
+                                                <td class="li-product-price"><span class="amount">{{ item.get_price_with_sales }} сом</span></td>
                                                 <td class="li-product-add-cart"><a href="#">add to cart</a></td>
                                             </tr>
-                                            <tr>
-                                                <td class="li-product-remove"><a href="#"><i class="fa fa-times"></i></a></td>
-                                                <td class="li-product-thumbnail"><a href="#"><img src="{% static 'images/wishlist-thumb/2.jpg' %}" alt=""></a></td>
-                                                <td class="li-product-name"><a href="#">Pro Bike Shoes</a></td>
-                                                <td class="li-product-price"><span class="amount">$30.50</span></td>
-                                                <td class="li-product-add-cart"><a href="#">add to cart</a></td>
-                                            </tr>
-                                            <tr>
-                                                <td class="li-product-remove"><a href="#"><i class="fa fa-times"></i></a></td>
-                                                <td class="li-product-thumbnail"><a href="#"><img src="{% static 'images/wishlist-thumb/3.jpg' %}" alt=""></a></td>
-                                                <td class="li-product-name"><a href="#">Nero Urban Shoes</a></td>
-                                                <td class="li-product-price"><span class="amount">$40.19</span></td>
-                                                <td class="li-product-add-cart"><a href="#">add to cart</a></td>
-                                            </tr>
+
+                                        {% endfor %}
                                         </tbody>
                                     </table>
                                 </div>
