--- a/almurut_core/templates/product-list.html
+++ b/almurut_core/templates/product-list.html
@@ -274,7 +274,7 @@
                                                                 <ul class="add-actions-link">
                                                                     <li class="add-cart active"><a href="shopping-cart.html">Add to cart</a></li>
                                                                     <li><a href="#" title="quick view" class="quick-view-btn" data-toggle="modal" data-target="#exampleModalCenter"><i class="fa fa-eye"></i></a></li>
-                                                                    <li><a class="links-details" href="favorites.html"><i class="fa fa-heart-o"></i></a></li>
+                                                                    <li><a class="links-details" href="{% url 'add-product-to-favorite-url' item.id  %}"><i class="fa fa-heart-o"></i></a></li>
                                                                 </ul>
                                                             </div>
                                                         </div>
